// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopMenuItem should be disabled 1`] = `
<div
  data-mock="MainItemWrap"
>
  {
  "disabled": true,
  "onClick": null,
  "href": "",
  "posRelative": false
}
  <span
    className="sc-AxjAm bmRlEN"
  />
</div>
`;

exports[`TopMenuItem should handle subMenu 1`] = `
<TopMenuItem
  disabled={false}
  href=""
  onClick={null}
  open={false}
  subMenu={
    Array [
      Object {
        "text": "some text - 1",
        "value": 1,
      },
      Object {
        "text": "some text - 2",
        "value": 2,
      },
    ]
  }
>
  <MainItemWrap
    disabled={false}
    href=""
    onClick={null}
    posRelative={true}
  >
    <div
      data-mock="MainItemWrap"
    >
      {
  "disabled": false,
  "onClick": null,
  "href": "",
  "posRelative": true
}
      <styled.span>
        <span
          className="sc-AxjAm bmRlEN"
        >
          Button text
        </span>
      </styled.span>
      <styled.span>
        <span
          className="sc-AxirZ fVHxRB"
        >
          <Icon
            name="caret-down"
          >
            <div
              data-mock="Icon"
            />
          </Icon>
        </span>
      </styled.span>
      <styled.div
        open={false}
      >
        <div
          className="sc-AxiKw iDxwic"
          open={false}
        >
          <SubMenu
            data={
              Array [
                Object {
                  "text": "some text - 1",
                  "value": 1,
                },
                Object {
                  "text": "some text - 2",
                  "value": 2,
                },
              ]
            }
          >
            <div
              data-mock="SubMenu"
            />
          </SubMenu>
        </div>
      </styled.div>
    </div>
  </MainItemWrap>
</TopMenuItem>
`;

exports[`TopMenuItem simple render 1`] = `
<div
  data-mock="MainItemWrap"
>
  {
  "disabled": false,
  "onClick": null,
  "href": "",
  "posRelative": false
}
  <span
    className="sc-AxjAm bmRlEN"
  />
</div>
`;
